gitops/apps/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: apps
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 80
